<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.losk.authentication.activities.CreateAccount">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/logo" />

        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/name_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <!-- Surname Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/surname_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <!-- Birthday TextView-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/birthday_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/birthday"
                android:textSize="19sp" />
        </TableRow>

        <!-- Birthday Spinners-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Spinner
                android:id="@+id/day_Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/month_Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/year_Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <!-- Sex RadioButtons -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/female_RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/male" />
            <RadioButton
                android:id="@+id/male_RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />
        </TableRow>

        <!-- Address TextView -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/address_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/address"
                android:textSize="19sp" />
        </TableRow>

        <!-- Street Label -->
        <android.support.design.widget.TextInputLayout
            style="@style/CreateAccountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/streetName_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/street_name" />
        </android.support.design.widget.TextInputLayout>

        <!-- House and flat numbers -->
        <TableRow
            style="@style/CreateAccountEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/houseNumber_EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:inputType="number"
                android:hint="@string/house_number" />
            <EditText
                android:id="@+id/flatNumber_EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/flat_number" />
        </TableRow>

        <!-- PostalCode Label -->
        <android.support.design.widget.TextInputLayout
            style="@style/CreateAccountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/postalCode_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/postal_code"
                android:inputType="textPostalAddress"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Country Label -->
        <android.support.design.widget.TextInputLayout
            style="@style/CreateAccountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/countryName_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country_name" />
        </android.support.design.widget.TextInputLayout>

        <!--  E-mail Label -->
        <android.support.design.widget.TextInputLayout
            style="@style/CreateAccountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/emailCreateAccount_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>


        <!-- Mobile phone number -->
        <android.support.design.widget.TextInputLayout
            style="@style/CreateAccountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/mobileNumber_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            style="@style/CreateAccountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/passwordCreateAccount_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Re-Enter Label -->
        <android.support.design.widget.TextInputLayout
            style="@style/CreateAccountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/reEnterPassword_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reEnter_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!-- SignUp Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/createAccount_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/create_account" />

        <TextView
            android:id="@+id/loginLink_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/alreadyMember_link"
            android:textSize="16dip" />

    </LinearLayout>
</ScrollView>
